testsuite/bsc.typechecker/typeclasses/ATFExportNoDots.bs
package ATFExportNoDots where

-- Test that importing a class without (..) does NOT make its ATF visible.
-- Elem should not be in scope.

import ATFExportNoDotsLib

test :: Box Integer -> Elem (Box Integer)
test = extract
